hphp/test/zend/good/ext-standard-strings/http_build_query_error.php
<?php

$result = http_build_query(null);

?>