hphp/test/zend/bad/ext/sockets/tests/socket_set_nonblock-wrongparams.php
<?php
$socket = socket_set_nonblock(array());
?>